圣诞树目录修改

--- a/js/index.html
+++ b/js/index.html
@@ -145,10 +145,10 @@
         </div>
     </div>
 
-    <audio autoplay controls loop src="./js/刺激战场圣诞大厅BGM.mp3"></audio>
+    <audio autoplay controls loop src="./刺激战场圣诞大厅BGM.mp3"></audio>
     <!-- <iframe src="./刺激战场圣诞大厅BGM.mp3" allow="autoplay" ></iframe> -->
 </body>
-<script src="./js/jquery.js"></script>
+<script src="./jquery.js"></script>
 <!-- 飘雪等效 -->
 <script src="http://www.lmlblog.com/winter/templets/xq/js/snowy.js"></script>
 <script src="http://www.lmlblog.com/blog/12/js/Snow.js"></script>
