--- a/demo/index.html
+++ b/demo/index.html
@@ -219,9 +219,9 @@
     </div>
 
     <!-- <audio autoplay controls loop src="./刺激战场圣诞大厅BGM.mp3"></audio> -->
-   <video autoplay controls loop src="./刺激战场圣诞大厅BGM.mp3"></video>
+   <video autoplay controls loop src="./asste/刺激战场圣诞大厅BGM.mp3"></video>
 </body>
-<script src="./jquery.js"></script>
+<script src="./js/jquery.js"></script>
 <!-- 飘雪等效 -->
 <script src="http://www.lmlblog.com/winter/templets/xq/js/snowy.js"></script>
 <script src="http://www.lmlblog.com/blog/12/js/Snow.js"></script>
