--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
 
     <!-- <audio autoplay controls loop src="./刺激战场圣诞大厅BGM.mp3"></audio> -->
-   <video autoplay controls loop src="./asste/刺激战场圣诞大厅BGM.mp3"></video>
+   <audio autoplay controls loop src="./asste/刺激战场圣诞大厅BGM.mp3"></audio>
 </body>
 <script src="./js/jquery.js"></script>
 <!-- 飘雪等效 -->
