--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta name='viewport'
         content='width=device-width, initial-scale=1.0,maximum-scale=1,minimum-scale=1,user-scalable=no'>
@@ -119,68 +120,79 @@
             box-shadow: 0px 1px 11px 10px gold;
             z-index: 100000
         }
-        video{
-            width:7rem;
+
+        video {
+            width: 7rem;
             /* height: 6rem; */
         }
-        .snow{
+
+        .snow {
             height: 0.5rem;
             width: 0.5rem;
             background-color: #fff;
             border-radius: 50%;
             z-index: 100002
         }
-        .snow2{
+
+        .snow2 {
             position: relative;
             left: 10rem;
             top: 10.5rem;
         }
-        .snow3{
+
+        .snow3 {
             position: relative;
             left: 9.5rem;
             top: 11rem;
         }
-        .snow4{
+
+        .snow4 {
             position: relative;
             left: 10.5rem;
             top: 11rem;
         }
-        .snow5{
+
+        .snow5 {
             position: relative;
             left: 7.7rem;
             top: 11.5rem;
         }
-        .snow1{
+
+        .snow1 {
             position: relative;
             left: 10rem;
             top: 14rem;
         }
-        .snow6{
+
+        .snow6 {
             position: relative;
             left: 12rem;
             top: 15rem;
         }
-        .snow7{
+
+        .snow7 {
             position: relative;
             left: 10rem;
             top: 14rem;
         }
-        .snow8{
+
+        .snow8 {
             position: relative;
             left: 12rem;
             top: 12.8rem;
         }
-        .snow9{
+
+        .snow9 {
             position: relative;
             left: 8.5rem;
             top: 12rem;
         }
-        .snow10{
+
+        .snow10 {
             position: relative;
             left: 7rem;
             top: 13rem;
         }
-       
     </style>
     <title>圣诞树demo</title>
 </head>
@@ -219,7 +231,7 @@
     </div>
 
     <!-- <audio autoplay controls loop src="./刺激战场圣诞大厅BGM.mp3"></audio> -->
-   <audio autoplay controls loop src="./asste/刺激战场圣诞大厅BGM.mp3"></audio>
+    <audio autoplay controls loop src="./asste/刺激战场圣诞大厅BGM.mp3"></audio>
 </body>
 <script src="./js/jquery.js"></script>
 <!-- 飘雪等效 -->
@@ -227,9 +239,9 @@
 <script src="http://www.lmlblog.com/blog/12/js/Snow.js"></script>
 <script>
     // 灯光颜色
-    var arr = [ '#36dbf1', 'rgb(251, 19, 135)', 'rgb(136, 255, 0)','gold']
+    var arr = ['#36dbf1', 'rgb(251, 19, 135)', 'rgb(136, 255, 0)', 'gold']
     // 灯光外圈炫光
-    var arr2 = [ '0px 1px 11px 10px #36dbf1', '0px 1px 11px 10px rgb(251, 19, 135)', '0px 1px 11px 10px rgb(136, 255, 0)','0px 1px 11px 10px gold']
+    var arr2 = ['0px 1px 11px 10px #36dbf1', '0px 1px 11px 10px rgb(251, 19, 135)', '0px 1px 11px 10px rgb(136, 255, 0)', '0px 1px 11px 10px gold']
     // 获取灯泡
     var box = document.getElementById('box')
 
