--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
             left: 7rem;
             top: 13rem;
         }
+        .character{
+            color: aqua;
+        }
     </style>
     <title>圣诞树demo</title>
 </head>
@@ -200,6 +203,7 @@
 <body>
     <!-- 雪花 -->
     <div class="snow-container"></div>
+    <div class="character">音乐文件有点大，请耐心等待！！！</div>
     <div class="box">
 
         <!-- 圣诞树 -->
