--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./asste/font_2616044_hnigy7pvrtq/iconfont.css">
     <meta name='viewport'
         content='width=device-width, initial-scale=1.0,maximum-scale=1,minimum-scale=1,user-scalable=no'>
+
     <style>
         body {
             /* height: 100%; */
             background-color: black;
+            overflow: hidden;
+            height: 100%;
         }
 
         * {
@@ -88,6 +92,7 @@
         .snow_field {
             position: absolute;
             bottom: 0rem;
+            left: 0;
             width: 100%;
             height: 11rem;
             background-color: #fff;
@@ -129,8 +134,9 @@
         .snow {
             height: 0.5rem;
             width: 0.5rem;
-            background-color: #fff;
-            border-radius: 50%;
+            /* background-color: #fff; */
+            /* border-radius: 50%; */
+            color: #ffff;
             z-index: 100002
         }
 
@@ -193,29 +199,28 @@
             left: 7rem;
             top: 13rem;
         }
-      
     </style>
-    <title>圣诞树demo</title>
+    <title>丝莹妹圣诞快乐</title>
 </head>
 
 <body>
     <!-- 雪花 -->
-    <div class="snow-container"></div>
-  
+    <!-- <div class="snow_a"></div> -->
+
     <div class="box">
 
         <!-- 圣诞树 -->
         <div class="tree">
-            <div class="snow snow1"></div>
-            <div class="snow snow2"></div>
-            <div class="snow snow3"></div>
-            <div class="snow snow4"></div>
-            <div class="snow snow5"></div>
-            <div class="snow snow6"></div>
-            <div class="snow snow7"></div>
-            <div class="snow snow8"></div>
-            <div class="snow snow9"></div>
-            <div class="snow snow10"></div>
+            <div class="snow snow1">❄</div>
+            <div class="snow snow2">❄</div>
+            <div class="snow snow3">❄</div>
+            <div class="snow snow4">❄</div>
+            <div class="snow snow5">❄</div>
+            <div class="snow snow6">❄</div>
+            <div class="snow snow7">❄</div>
+            <div class="snow snow8">❄</div>
+            <div class="snow snow9">❄</div>
+            <div class="snow snow10">❄</div>
             <!-- 灯泡 -->
             <div class="buld" id="box"></div>
             <!-- 树 -->
@@ -230,15 +235,14 @@
             <div class="shadown">
             </div>
         </div>
+        <span class="iconfont icon-xingxing"></span>
     </div>
 
-  
-   
+
+
 </body>
+
 <script src="./js/jquery.js"></script>
-<!-- 飘雪等效 -->
-<script src="http://www.lmlblog.com/winter/templets/xq/js/snowy.js"></script>
-<script src="http://www.lmlblog.com/blog/12/js/Snow.js"></script>
 <script>
     // 灯光颜色
     var arr = ['#36dbf1', 'rgb(251, 19, 135)', 'rgb(136, 255, 0)', 'gold']
@@ -264,7 +268,41 @@
 
         }
     }, 6000)
+    var minsize = 5,
+        maxsize = 50,
+        time1 = 100,
+        snowColor = "#fff";
+    var snow = $("<div></div>").css({
+        "position": "absolute",
+        "top": "-50px",
+        'z-index': '10005',
+    }).html("❄");
+    $(function () {
+        var documentWidth = $(document).width();
+        var documentHeight = $(document).height();
+        setInterval(function () {
+            var startPositionLeft = Math.random() * documentWidth;//起始X位置
+            var startOpacity = 0.7 + Math.random() * 0.3;//起始透明度
+            var endPositionLeft = Math.random() * documentWidth;//终止x位置
+            var endPositionTop = documentHeight;//终止y位置
+            var fallSpeed = 4000 + Math.random() * 3000;//下降速度
+            var snowSize = minsize + Math.random() * maxsize;//雪花随机尺寸
+            snow.clone().appendTo("body").css({
+                "left": startPositionLeft,
+                "font-size": snowSize,
+                "opacity": startOpacity,
+                "color": snowColor
 
+            }).animate({
+                "top": endPositionTop,
+                "left": endPositionLeft,
+                "opacity": 0.5,
+            }, fallSpeed, function () {
+                $(this).remove();
+            });
+
+        }, time1);
+    })
     // setInterval(function () {
     //     for (var i = 0; i <= arr.length; i++) {
     //         (function (e) {
